@@ -7,12 +7,19 @@
   margin-left: 6pt;
   margin-right: 6pt;
 }
-p, td { 
+td { 
   font-family: Arial, sans-serif; 
   font-size: 10pt;
   font-style: normal;
   margin-bottom: 3pt; 
   margin-top: 3pt;
+}
+p { 
+  font-family: Arial, sans-serif; 
+  font-size: 10pt;
+  font-style: normal;
+  margin-bottom: 8pt; 
+  margin-top: 8pt;
 }
 ul,ol {
   margin-top: 2pt;
@@ -31,14 +38,16 @@ h1 {
   margin-top: 4pt;
 }
 h2 {
+  border-top: solid 1 #e5ecf9;
   font-family: Arial, sans-serif; 
   font-size: 12pt;
   font-style: normal;
   font-weight: bold;
   margin-bottom: 5pt; 
-  margin-top: 20pt;
+  margin-top: 24pt;
 }
 h3 {
+  border-top: solid 1 #e5ecf9;
   font-family: Arial, sans-serif; 
   font-size: 11pt;
   font-style: normal;
